vcl commit cái chỗ script

--- a/testgit.html
+++ b/testgit.html
@@ -19,9 +19,10 @@
     </head>
     <body>
         <h1 class="text-center">Hello World php thoi</h1>
-
+        <p>commit 1 lan thoi</p>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>test</script>
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
